AC_INIT(src/main.c)
AC_CONFIG_HEADERS([config.h])
PACKAGE=musicplayer
VERSION=0.2
CFLAGS="$CFLAGS -Wall"

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AC_PROG_LIBTOOL
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_HEADER_DIRENT
AM_PROG_CC_C_O

GLIB_REQS=2.13.4
GTK_REQS=2.16.0
GST_MAJORMINOR=0.10
GST_REQS=0.10.24
GSTPLUG_REQS=0.10.00


PKG_CHECK_MODULES(GLIB,[
  glib-2.0 >= $GLIB_REQS
  gio-2.0
  gtk+-2.0 >= $GTK_REQS
  gmodule-2.0
  gconf-2.0
  ])

AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LDFLAGS)

PKG_CHECK_MODULES(GST,[
  gstreamer-0.10 >= $GSTPLUG_REQS
  ])



AC_SUBST(GST_CFLAGS)
AC_SUBST(GST_LDFLAGS)

dnl Check for required plugins
gst010_toolsdir=`$PKG_CONFIG --variable=toolsdir gstreamer-0.10`
gst010_inspect="$gst010_toolsdir/gst-inspect-0.10"

dnl Give error and exit if we don't have the gst_inspect tool
AC_MSG_CHECKING([GStreamer 0.10 inspection tool])
if test -r "$gst010_inspect"; then
	AC_MSG_RESULT([yes])
else
	AC_MSG_RESULT([no])
	AC_MSG_ERROR([
		Cannot find required GStreamer-0.10 tool 'gst-inspect-0.10'.
		It should be part of gstreamer-0_10-utils. Please install it.
	])
fi

dnl Check for elements from gst-plugins-base
for base_element in playbin gconfaudiosink
do
	AC_MSG_CHECKING([GStreamer 0.10 $base_element plugin])
	if $gst010_inspect $base_element >/dev/null 2>/dev/null; then
		AC_MSG_RESULT([yes])
	else
		AC_MSG_RESULT([no])
		AC_MSG_ERROR([
			Cannot find required GStreamer-0.10 plugin '$base_element'.
			It should be part of gst-plugins-base. Please install it.
		])
	fi
done

PKG_CHECK_MODULES([GTK],[gtk+-2.0 gthread-2.0])

dnl run in source tree
AC_ARG_ENABLE(run-in-source-tree,
	      AC_HELP_STRING([--disable-run-in-source-tree],[disable search for UI files and plugins in local directory ]),
	[case "${enableval}" in
	yes) ENABLE_RUN_IN_SOURCE_TREE=yes ;;
	no)  ENABLE_RUN_IN_SOURCE_TREE=no ;;
	*) AC_MSG_ERROR(bad value ${enableval} for --disable-run-in-source-tree) ;;
	esac],
[ENABLE_RUN_IN_SOURCE_TREE=yes]) dnl Default value
if test x$ENABLE_RUN_IN_SOURCE_TREE = xyes; then
	AC_DEFINE(TOTEM_RUN_IN_SOURCE_TREE, 1, [enable search for UI files and plugins in local directory])
fi

PKG_CHECK_MODULES(LIBNOTIFY, libnotify )
PKG_CHECK_MODULES([UNIQUE], unique-1.0)
AC_OUTPUT([
Makefile
src/Makefile
src/plugins/Makefile
src/plugins/real/Makefile
src/plugins/visual/Makefile
src/plugins/stats/Makefile
])


