bin_PROGRAMS = musicplayer
INCLUDES =  $(GST_CFLAGS) $(GLIB_CFLAGS)  
musicplayer_LDADD = $(GLIB_LIBS) $(INTI_LIBS) $(GST_LIBS)

musicplayer_SOURCES = music-main-window.c musicseek.c player.c main.c music-queue.c music-volume.c  tag-scanner.c music-queue.h  music-volume.h  music-main-window.h music-seek.h player.h tag-scanner.h  music-store.c music-store.h jump-window.h jump-window.c pl-reader.h  pl-reader.c  xspf-reader.h  xspf-reader.c m3u-reader.h  m3u-reader.c


